[package]
name = "resvg-capi"
version = "0.4.0"
authors = ["Evgeniy Reizner <razrfalcon@gmail.com>"]
keywords = ["svg", "render", "raster", "capi"]
license = "MPL-2.0"
workspace = ".."

[lib]
name = "resvg"
crate-type = ["staticlib"]

[dependencies]
fern = "0.5"
log = "0.4"
resvg = { path = "../" }

# cairo backend
glib = { git = "https://github.com/StinkStudios/glib", tag = "0.6.1", version = "0.6.1", optional = true }
cairo-sys-rs = { git = "https://github.com/StinkStudios/cairo", tag = "0.7.1", version = "0.7.1", optional = true }

[features]
cairo-backend = ["resvg/cairo-backend", "glib", "cairo-sys-rs"]
qt-backend = ["resvg/qt-backend"]
